--- a/template/index.html
+++ b/template/index.html
@@ -769,6 +769,7 @@
                         <tbody>
                           {state.repayList.map((p, i) => (
                             <tr key={i} class="border-b hover:bg-gray-50">
+                              <td class="p-3 border">{p.name}</td> {/* 修正：顯示姓名 */}
                               <td class="p-3 border">{p.debt.toLocaleString('zh-TW', {minimumFractionDigits: 0, maximumFractionDigits: 0})}</td>
                               <td class="p-3 border">
                                 <button
@@ -778,17 +779,17 @@
                                   刪除
                                 </button>
                               </td>
-                            </tr>
+                          </tr>
                           ))}
                         </tbody>
-                      </table>
-                    </div>
-                    <div class="mt-6 p-4 border border-gray-200 rounded-lg bg-gray-50 flex justify-center items-center">
+                    </table>
+                  </div>
+                  <div class="mt-6 p-4 border border-gray-200 rounded-lg bg-gray-50 flex justify-center items-center">
                       <div style={{ height: '300px', width: '100%', maxWidth: '500px' }}>
                         <canvas id="overall-debt-chart"></canvas>
                       </div>
-                    </div>
-                  </>
+                  </div>
+                </>
                 )}
               </div>
 
@@ -840,7 +841,9 @@
                           <thead class="bg-gray-50 sticky-header">
                             <tr>
                               {headers.map((header, index) => (
-                                <th key={index} class="p-3 font-semibold text-gray-700 border min-w-[120px] whitespace-nowrap">{header}</th>
+                                <th key={index} class="p-3 font-semibold text-gray-700 border min-w-[120px] whitespace-nowrap">
+                                    {header}
+                                </th>
                               ))}
                             </tr>
                           </thead>
