--- a/template/index.html
+++ b/template/index.html
@@ -153,19 +153,11 @@
 </head>
 <body>
   <div id="root"></div>
-  <footer class="fixed bottom-0 left-0 w-full bg-gray-100 border-t border-gray-300 py-3 text-center text-sm font-sans text-gray-600 z-50">
-  <nav class="space-x-4">
-    <a href="about.html" class="text-blue-600 hover:underline">關於我們</a>
-    <span>|</span>
-    <a href="contact.html" class="text-blue-600 hover:underline">聯絡我們</a>
-    <span>|</span>
-    <a href="privacy.html" class="text-blue-600 hover:underline">隱私權政策</a>
-    <span>|</span>
-    <a href="terms.html" class="text-blue-600 hover:underline">使用條款</a>
-  </nav>
-  <div class="mt-1">
-    © 2025 超級還款試算表團隊。版權所有。
-  </div>
+<footer class="footer">
+  <a href="/privacy" target="_blank">隱私權政策</a> |
+  <a href="/terms" target="_blank">使用條款</a> |
+  <a href="/about" target="_blank">關於我們</a> |
+  <a href="/contact" target="_blank">聯絡我們</a>
 </footer>
 
 <script type="text/babel">
